--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -4,16 +4,24 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "# Explore here"
+                "# Final Project JOF\n"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 1,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "hola\n"
+                    ]
+                }
+            ],
             "source": [
-                "# Your code here"
+                "print(\"hola\")"
             ]
         }
     ],
@@ -33,7 +41,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.8.13"
+            "version": "3.10.12"
         },
         "orig_nbformat": 4,
         "vscode": {
