--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -4,37 +4,52 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "# <span style=\"color: green; font-weight: bold; text-decoration: underline;\">Final Project JOF</span>\n",
-                "\n",
-                "# <span style=\"color: green; font-weight: bold; text-decoration: underline;\">Renewable Power Generation and weather Conditions</span>\n",
-                "\n"
+                "<p align=\"center\"><span style=\"color:#00cc00; text-decoration:underline; font-size:1.5em;\"><i>FINAL PROYECT JOF</i></span></p>"
             ]
         },
         {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "Hello everyone! We are students of the Data Science & Machine Learning Bootcamp: Javier Serrano, Olga Kurganova, and Fernando Tejada. For our final project, we have decided to work with a dataset that records the energy collected by a solar panel in a specific geographical location. Additionally, the dataset includes variables related to weather conditions, chronological time and the variation in the amount of energy produced, all of which can influence in the amount of solar radiation the panel collects, including the \"Global Horizontal Irradiance\" (GHI):\n",
+                "<p align=\"center\"><span style=\"color:#00cc00; text-decoration:underline; font-size:1.2em;\"><i>Renewable Power Generation and weather Conditions</i></span></p>"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "![alt text](vecteezy_solar-panel-with-blue-sky-and-sunset-concept-clean-energy_8423306.jpg)"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "**¡Hola a todos! Somos estudiantes del Bootcamp de Ciencia de Datos y Aprendizaje Automático: Javier Serrano, Olga Kurganova y Fernando Tejada. Para nuestro proyecto final, hemos decidido trabajar con un conjunto de datos que registra la energía recolectada por un panel solar en una ubicación geográfica específica. Además, el conjunto de datos incluye variables relacionadas con las condiciones climáticas, el tiempo cronológico y la variación en la cantidad de energía producida, todas las cuales pueden influir en la cantidad de radiación solar que el panel recoge, incluida la \"Irradiancia Global Horizontal\" (IGH):**\n",
                 "\n",
-                "- Time\n",
-                "- Energy delta[Wh]\n",
-                "- GHI (Global Horizontal Irradiance)\n",
-                "- temp\n",
-                "- pressure\n",
-                "- humidity\n",
-                "- wind_speed\n",
-                "- rain_1h\n",
-                "- snow_1h\n",
-                "- clouds_all\n",
-                "- isSun\n",
-                "- sunlightTime\n",
-                "- dayLength\n",
-                "- SunlightTime/dayLength\n",
-                "- weather_type\n",
-                "- hour\n",
-                "- month\n",
+                "*Hello everyone! We are students of the Data Science & Machine Learning Bootcamp: Javier Serrano, Olga Kurganova, and Fernando Tejada. For our final project, we have decided to work with a dataset that records the energy collected by a solar panel in a specific geographical location. Additionally, the dataset includes variables related to weather conditions, chronological time and the variation in the amount of energy produced, all of which can influence in the amount of solar radiation the panel collects, including the \"Global Horizontal Irradiance\" (GHI):*\n",
                 "\n",
-                "Thanks to this dataset, we will be able to create a Machine Learning model that allows us to determine whether the installation of solar panels is viable based on the amount of energy they can collect and the weather conditions at the chosen installation site. In this way, we will create a tool that enables both local individuals and energy sector companies to verify whether it is profitable to invest in the installation of solar panels."
+                "- Time                                      \n",
+                "- Energy delta [Wh]                          \n",
+                "- GHI (Global Horizontal Irradiance)        \n",
+                "- Temp                                     \n",
+                "- Pressure                                 \n",
+                "- Humidity\n",
+                "- Wind_speed                                  \n",
+                "- Rain_1h                                  \n",
+                "- Snow_1h                                 \n",
+                "- Clouds_all                                \n",
+                "- IsSun                                     \n",
+                "- SunlightTime                             \n",
+                "- DayLength                                 \n",
+                "- SunlightTime/dayLength                    \n",
+                "- Weather_type                             \n",
+                "- Hour                                     \n",
+                "- Month    \n",
+                "\n",
+                "**Gracias a este conjunto de datos, podremos crear un modelo de Aprendizaje Automático que nos permita determinar si la instalación de paneles solares es viable basándonos en la cantidad de energía que pueden recolectar y las condiciones climáticas en el sitio de instalación elegido. De esta manera, crearemos una herramienta que permita tanto a individuos locales como a empresas del sector energético verificar si es rentable invertir en la instalación de paneles solares.**\n",
+                "\n",
+                "*Thanks to this dataset, we will be able to create a Machine Learning model that allows us to determine whether the installation of solar panels is viable based on the amount of energy they can collect and the weather conditions at the chosen installation site. In this way, we will create a tool that enables both local individuals and energy sector companies to verify whether it is profitable to invest in the installation of solar panels.*"
             ]
         },
         {
