ahora el df con tiempo dividido se llama total_data_timediv y el df que mantiene month como variable categórica se llama total_data

--- a/src/Proyecto JOF.ipynb
+++ b/src/Proyecto JOF.ipynb
@@ -894,7 +894,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 10,
+            "execution_count": 4,
             "metadata": {},
             "outputs": [
                 {
@@ -1108,7 +1108,7 @@
                             "max        23.000000  "
                         ]
                     },
-                    "execution_count": 10,
+                    "execution_count": 4,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -1445,7 +1445,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 13,
+            "execution_count": 5,
             "metadata": {},
             "outputs": [
                 {
@@ -1454,7 +1454,7 @@
                             "(196776, 17)"
                         ]
                     },
-                    "execution_count": 13,
+                    "execution_count": 5,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -1472,7 +1472,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 14,
+            "execution_count": 6,
             "metadata": {},
             "outputs": [
                 {
@@ -1520,7 +1520,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 15,
+            "execution_count": 7,
             "metadata": {},
             "outputs": [
                 {
@@ -1554,7 +1554,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 16,
+            "execution_count": 8,
             "metadata": {},
             "outputs": [
                 {
@@ -1719,7 +1719,7 @@
                             "4             0        450                     0.0  "
                         ]
                     },
-                    "execution_count": 16,
+                    "execution_count": 8,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -1734,7 +1734,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 17,
+            "execution_count": 9,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -1794,30 +1794,6 @@
             ]
         },
         {
-            "cell_type": "code",
-            "execution_count": 19,
-            "metadata": {},
-            "outputs": [
-                {
-                    "data": {
-                        "text/plain": [
-                            "Index(['Time', 'month', 'Energy delta[Wh]', 'weather_type', 'isSun_category',\n",
-                            "       'GHI', 'temp', 'pressure', 'humidity', 'wind_speed', 'rain_1h',\n",
-                            "       'snow_1h', 'clouds_all', 'sunlightTime', 'dayLength',\n",
-                            "       'SunlightTime/daylength'],\n",
-                            "      dtype='object')"
-                        ]
-                    },
-                    "execution_count": 19,
-                    "metadata": {},
-                    "output_type": "execute_result"
-                }
-            ],
-            "source": [
-                "total_data.columns"
-            ]
-        },
-        {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
@@ -1828,12 +1804,23 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "previo al análisis de estas variables, hay que transformar la variable 'Time' para su análisis"
+                "Previo al análisis de estas variables, hay que transformar la variable 'Time' para su análisis"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 20,
+            "execution_count": 11,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# diferenciamos bases de datos para mantener la variable 'month' como categórica\n",
+                "\n",
+                "total_data_timediv = total_data.copy()"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 13,
             "metadata": {},
             "outputs": [
                 {
@@ -2022,27 +2009,27 @@
                             "4             0        450                     0.0  2017    1     1       0  "
                         ]
                     },
-                    "execution_count": 20,
+                    "execution_count": 13,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
             ],
             "source": [
-                "total_data['Time'] = pd.to_datetime(total_data['Time'])\n",
+                "total_data_timediv['Time'] = pd.to_datetime(total_data_timediv['Time'])\n",
                 "\n",
                 "# Extraer Año, Mes y Hora\n",
-                "total_data['year'] = total_data['Time'].dt.year\n",
-                "total_data['month'] = total_data['Time'].dt.month\n",
-                "total_data['day'] = total_data['Time'].dt.day\n",
-                "total_data['hour'] = total_data['Time'].dt.hour\n",
-                "total_data['minute'] = total_data['Time'].dt.minute\n",
+                "total_data_timediv['year'] = total_data_timediv['Time'].dt.year\n",
+                "total_data_timediv['month'] = total_data_timediv['Time'].dt.month\n",
+                "total_data_timediv['day'] = total_data_timediv['Time'].dt.day\n",
+                "total_data_timediv['hour'] = total_data_timediv['Time'].dt.hour\n",
+                "total_data_timediv['minute'] = total_data_timediv['Time'].dt.minute\n",
                 "\n",
                 "total_data.head()"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 21,
+            "execution_count": 14,
             "metadata": {},
             "outputs": [
                 {
@@ -2225,22 +2212,22 @@
                             "4         100             0        450                     0.0  "
                         ]
                     },
-                    "execution_count": 21,
+                    "execution_count": 14,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
             ],
             "source": [
-                "df = total_data[['year', 'month', 'day', 'hour', 'minute', 'Energy delta[Wh]', 'weather_type', 'isSun_category',\n",
+                "total_data_timediv = total_data_timediv[['year', 'month', 'day', 'hour', 'minute', 'Energy delta[Wh]', 'weather_type', 'isSun_category',\n",
                 "       'GHI', 'temp', 'pressure', 'humidity', 'wind_speed', 'rain_1h',\n",
                 "       'snow_1h', 'clouds_all', 'sunlightTime', 'dayLength', 'SunlightTime/daylength']].copy()\n",
                 "\n",
-                "df.head()"
+                "total_data_timediv.head()"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 22,
+            "execution_count": 15,
             "metadata": {},
             "outputs": [
                 {
@@ -2264,11 +2251,11 @@
                 "for i, feature in enumerate(features):\n",
                 "\n",
                 "    # Histogram\n",
-                "    sns.histplot(ax=axes[i, 0], data=total_data, x=feature, bins=35, color='green').set(ylabel=None)\n",
+                "    sns.histplot(ax=axes[i, 0], data=total_data_timediv, x=feature, bins=35, color='green').set(ylabel=None)\n",
                 "    axes[i, 0].set_title(f'{feature} Hisplot', fontdict={'fontsize': 17})\n",
                 "    \n",
                 "    #boxplot\n",
-                "    sns.boxplot(ax=axes[i, 1], data=total_data, x=feature)\n",
+                "    sns.boxplot(ax=axes[i, 1], data=total_data_timediv, x=feature)\n",
                 "    axes[i, 1].set_title(f'{feature} Boxplot', fontdict={'fontsize': 17})\n",
                 "\n",
                 "plt.tight_layout()\n",
@@ -2396,7 +2383,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 24,
+            "execution_count": 16,
             "metadata": {},
             "outputs": [
                 {
@@ -2414,10 +2401,10 @@
                 "fig, axis = plt.subplots(2, 2, figsize = (10, 7))\n",
                 "\n",
                 "# Crear un diagrama de dispersión múltiple\n",
-                "sns.regplot(ax = axis[0, 0], data = total_data, x = \"month\", y = \"Energy delta[Wh]\")\n",
-                "sns.heatmap(total_data[[\"Energy delta[Wh]\", \"month\"]].corr(), annot = True, fmt = \".2f\", ax = axis[1, 0], cbar = False)\n",
-                "sns.regplot(ax = axis[0, 1], data = total_data, x = \"hour\", y = \"Energy delta[Wh]\").set(ylabel=None)\n",
-                "sns.heatmap(total_data[[\"Energy delta[Wh]\", \"hour\"]].corr(), annot = True, fmt = \".2f\", ax = axis[1, 1])\n",
+                "sns.regplot(ax = axis[0, 0], data = total_data_timediv, x = \"month\", y = \"Energy delta[Wh]\")\n",
+                "sns.heatmap(total_data_timediv[[\"Energy delta[Wh]\", \"month\"]].corr(), annot = True, fmt = \".2f\", ax = axis[1, 0], cbar = False)\n",
+                "sns.regplot(ax = axis[0, 1], data = total_data_timediv, x = \"hour\", y = \"Energy delta[Wh]\").set(ylabel=None)\n",
+                "sns.heatmap(total_data_timediv[[\"Energy delta[Wh]\", \"hour\"]].corr(), annot = True, fmt = \".2f\", ax = axis[1, 1])\n",
                 "\n",
                 "# Ajustar el layout\n",
                 "plt.tight_layout()\n",
@@ -2621,7 +2608,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "lblbllb"
+                "## Categórico-Categórico"
             ]
         }
     ],
