--- a/src/Proyecto JOF.ipynb
+++ b/src/Proyecto JOF.ipynb
@@ -3485,6 +3485,62 @@
                 "**Resumen General:** \n",
                 "**Las relaciones indican que a medida que la humedad aumenta, disminuyen parámetros como la variabilidad energética, irradiancia solar, temperatura y tiempo de luz solar directa. La humedad está asociada con condiciones más nubladas, menos eficientes para la energía solar y más frescas. La longitud del día y el tipo de lugar también afectan la humedad, aunque con una relación más débil.** "
             ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "**There are strong Positive  relation between**\n",
+                "- **Ghi-Energy(0,91)**\n",
+                "    Descripción: A mayor irradiancia horizontal global, mayor producción de energía.\n",
+                "- **Temp-Energy(0,38)**\n",
+                "    Descripción: A mayor temperatura, mayor producción de energía.\n",
+                "- **Whether_type-Energy(0,38)**\n",
+                "    El tipo de lugar influye en la disponibilidad de radiación solar y condiciones ambientales. Por ejemplo, áreas desérticas o zonas con alta exposición solar generalmente producen más energía solar.\n",
+                "\n",
+                "- **DayLenght-Energy(0,28)**\n",
+                "    Descripción: A mayor longitud del día, mayor producción de energía.\n",
+                "- **Sunlight-Energy(0,44)**\n",
+                "    Descripción: A mayor cantidad de luz solar, mayor producción de energía\n",
+                "- **SunLight/daylenght-Energy(0,40)**\n",
+                "    A mayor combinación de luz solar y duración del día, mayor producción de energía.\n",
+                "- **isSun-Energy(0,53)**\n",
+                "    La presencia de sol aumenta la producción de energía. "
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "Resumen General\n",
+                "Las relaciones positivas fuertes indican que la producción de energía está fuertemente influenciada por la irradiancia solar, la temperatura, el tipo de lugar, la duración del día y la cantidad de luz solar. Estos factores son críticos para la eficiencia y la cantidad de energía generada, especialmente en sistemas solares fotovoltaicos. En general, las condiciones que aumentan la disponibilidad de radiación solar y las horas de luz del día tienden a aumentar significativamente la producción de energía."
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "**There are strong Positive  relation between**\n",
+                "\n",
+                "- **Ghi-temp(0,48)**\n",
+                "   Más irradiancia solar significa más energía solar que calienta la superficie terrestre, elevando la temperatura del aire.\n",
+                "- **Ghi-sunlight(0,54)**\n",
+                "   A mayor irradiancia horizontal global, mayor cantidad de luz solar directa.\n",
+                "- **Ghi-daylenght(0,40)**\n",
+                "   Días más largos permiten más horas de exposición solar, incrementando la irradiancia total recibida.\n",
+                "- **Ghi-sunlight/daylenght(0,47)**\n",
+                "   A mayor combinación de luz solar y duración del día, mayor irradiancia horizontal global.\n",
+                "- **Ghi-isSun(0,60)**\n",
+                "   Alta irradiancia solar está asociada con condiciones despejadas y soleadas, aumentando la cantidad de días con sol directo."
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "Resumen General\n",
+                "Las relaciones positivas indican que la irradiancia horizontal global (GHI) está fuertemente influenciada por la temperatura, la cantidad de luz solar, la longitud del día, y la frecuencia de días soleados. Estos factores se complementan, ya que más horas de luz solar y días despejados aumentan la energía solar recibida, calentando la atmósfera y extendiendo la duración de la irradiancia sola"
+            ]
         }
     ],
     "metadata": {
