--- a/src/Proyecto JOF.ipynb
+++ b/src/Proyecto JOF.ipynb
@@ -3520,6 +3520,16 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
+                "**<span style=\"color:#004080;\">GHI significa \"Global Horizontal Irradiance\"</span>**\n",
+                "\n",
+                "**<span style=\"color:#004080;\">Global Horizontal Irradiance\" en inglés, que se traduce al español como \"Irradiancia Global Horizontal\". Es una medida de la cantidad de radiación solar que llega a la superficie de la Tierra horizontalmente en un área determinada durante un período específico de tiempo. La unidad de medida típica para GHI es Watts por metro cuadrado (W/m²).\"</span>**\n",
+                "\n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
                 "**There are strong Positive  relation between**\n",
                 "\n",
                 "- **Ghi-temp(0,48)**\n",
@@ -3538,8 +3548,8 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "Resumen General\n",
-                "Las relaciones positivas indican que la irradiancia horizontal global (GHI) está fuertemente influenciada por la temperatura, la cantidad de luz solar, la longitud del día, y la frecuencia de días soleados. Estos factores se complementan, ya que más horas de luz solar y días despejados aumentan la energía solar recibida, calentando la atmósfera y extendiendo la duración de la irradiancia sola"
+                "**<span style=\"color:#004080;\">Resumen General\"</span>**\n",
+                "**<span style=\"color:#004080;\">Las relaciones positivas indican que la irradiancia horizontal global (GHI) está fuertemente influenciada por la temperatura, la cantidad de luz solar, la longitud del día, y la frecuencia de días soleados. Estos factores se complementan, ya que más horas de luz solar y días despejados aumentan la energía solar recibida, calentando la atmósfera y extendiendo la duración de la irradiancia sola\"</span>**"
             ]
         }
     ],
