--- a/src/Proyecto JOF.ipynb
+++ b/src/Proyecto JOF.ipynb
@@ -3415,10 +3415,7 @@
             "metadata": {},
             "source": [
                 "**There are some  relation between**\n",
-                "- **Month-temp(0.25)** Indica una relación positiva débil. La temperatura tiende a aumentar o disminuir con el cambio de mes, pero hay una gran variabilidad debido a otros factores.\n",
-                "\n",
-                "- **Month-humidity(0.12)** Indica una relación muy débil. La humedad no muestra un patrón claro de cambio con el mes, sugiriendo que otros factores son más influyentes.\n",
-                "**En resumen, la relación entre el mes y la temperatura refleja las variaciones estacionales que son típicas en muchos climas, aunque no de manera muy fuerte. La relación entre el mes y la humedad es más débil porque la humedad depende de muchos otros factores además de los cambios estacionales.**"
+                "- **Month-temp(0.25)** Indica una relación positiva débil. La temperatura tiende a aumentar o disminuir con el cambio de mes, pero hay una gran variabilidad debido a otros factores.\n"
             ]
         },
         {
@@ -3475,7 +3472,10 @@
                 "    **Una correlación de -0.25 entre Where_type y la humedad indica una relación negativa débil. Esto significa que ciertos tipos de lugares tienden a tener diferentes niveles de humedad, y a medida que cambiamos de un tipo de lugar a otro, la humedad puede variar de manera sistemática, aunque la relación no es muy fuerte.**\n",
                 "   \n",
                 " - **Hour-humidity(-0.19)** \n",
-                "    **Una correlación de -0.19 entre la hora y la humedad indica una relación negativa débil. Esto significa que a medida que avanza el día, la humedad tiende a disminuir ligeramente, pero no de manera muy fuerte** \n"
+                "    **Una correlación de -0.19 entre la hora y la humedad indica una relación negativa débil. Esto significa que a medida que avanza el día, la humedad tiende a disminuir ligeramente, pero no de manera muy fuerte** \n",
+                "\n",
+                "   - **Month-humidity(0.12)** Indica una relación muy débil. La humedad no muestra un patrón claro de cambio con el mes, sugiriendo que otros factores son más influyentes.\n",
+                "**En resumen, la relación entre el mes y la temperatura refleja las variaciones estacionales que son típicas en muchos climas, aunque no de manera muy fuerte. La relación entre el mes y la humedad es más débil porque la humedad depende de muchos otros factores además de los cambios estacionales.** \n"
             ]
         },
         {
@@ -3550,6 +3550,32 @@
             "source": [
                 "**<span style=\"color:#004080;\">Resumen General\"</span>**\n",
                 "**<span style=\"color:#004080;\">Las relaciones positivas indican que la irradiancia horizontal global (GHI) está fuertemente influenciada por la temperatura, la cantidad de luz solar, la longitud del día, y la frecuencia de días soleados. Estos factores se complementan, ya que más horas de luz solar y días despejados aumentan la energía solar recibida, calentando la atmósfera y extendiendo la duración de la irradiancia sola\"</span>**"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "**There are strong  relation between**\n",
+                "\n",
+                "- **Clouds_all-whether_type(-0,94)**\n",
+                "   Diferentes tipos de clima (por ejemplo, soleado, nublado, tormentoso) están directamente influenciados por la cantidad de cobertura nubosa\n",
+                "- **Clouds_all-pressure(-0,26)**\n",
+                "   Las áreas de baja presión suelen estar asociadas con mayor cobertura nubosa y condiciones meteorológicas inestables, como tormentas y frentes fríos\n",
+                "- **Clouds_all-humididy(0,29)**\n",
+                "   Las nubes son formaciones de vapor de agua condensado, por lo que una mayor cobertura nubosa indica más humedad en la atmósfera.\n",
+                "- **Clouds_all-wind_speed(0,15)**\n",
+                "   A mayor cobertura nubosa, mayor velocidad del viento..\n",
+                "- **Clouds_all-irain-1h(0,17)**\n",
+                "   A mayor cobertura nubosa, mayor cantidad de lluvia en una hora."
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "**<span style=\"color:#004080;\">Resumen General\"</span>**\n",
+                "**<span style=\"color:#004080;\">Las relaciones indican que la cobertura nubosa está estrechamente relacionada con varios parámetros climáticos. Una alta cobertura nubosa generalmente se asocia con climas más húmedos, mayor probabilidad de lluvia, y condiciones de baja presión y vientos más fuertes. La relación negativa con el tipo de clima destaca cómo la cantidad de nubes puede definir diferentes condiciones meteorológicas, mientras que las correlaciones positivas con la humedad, la velocidad del viento y la precipitación subrayan el papel crucial de las nubes en el clima.\"</span>**"
             ]
         }
     ],
