--- a/src/Proyecto JOF min-max.ipynb
+++ b/src/Proyecto JOF min-max.ipynb
@@ -68,7 +68,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 35,
+            "execution_count": 1,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -81,9 +81,7 @@
                 "import matplotlib.pyplot as plt\n",
                 "import seaborn as sns\n",
                 "from sklearn.model_selection import train_test_split\n",
-                "from sklearn.preprocessing import MinMaxScaler, StandardScaler\n",
-                "from sklearn.ensemble import RandomForestRegressor\n",
-                "from sklearn.feature_selection import f_regression, SelectKBest\n"
+                "from sklearn.preprocessing import MinMaxScaler, StandardScaler"
             ]
         },
         {
@@ -1813,7 +1811,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 23,
+            "execution_count": 4,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -1824,7 +1822,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 24,
+            "execution_count": 5,
             "metadata": {},
             "outputs": [
                 {
@@ -1989,7 +1987,7 @@
                             "4             0        450                     0.0  "
                         ]
                     },
-                    "execution_count": 24,
+                    "execution_count": 5,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -2009,7 +2007,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 25,
+            "execution_count": 6,
             "metadata": {},
             "outputs": [
                 {
@@ -2192,7 +2190,7 @@
                             "4         100             0        450                     0.0  "
                         ]
                     },
-                    "execution_count": 25,
+                    "execution_count": 6,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -3813,7 +3811,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 26,
+            "execution_count": 20,
             "metadata": {},
             "outputs": [
                 {
@@ -3854,11 +3852,15 @@
                             "      <th>sunlightTime</th>\n",
                             "      <th>dayLength</th>\n",
                             "      <th>SunlightTime/daylength</th>\n",
+                            "      <th>weather_type_n</th>\n",
+                            "      <th>isSun_n</th>\n",
                             "    </tr>\n",
                             "  </thead>\n",
                             "  <tbody>\n",
                             "    <tr>\n",
                             "      <th>count</th>\n",
+                            "      <td>196776.000000</td>\n",
+                            "      <td>196776.000000</td>\n",
                             "      <td>196776.000000</td>\n",
                             "      <td>196776.000000</td>\n",
                             "      <td>196776.000000</td>\n",
@@ -3896,6 +3898,8 @@
                             "      <td>211.721094</td>\n",
                             "      <td>748.644347</td>\n",
                             "      <td>0.265187</td>\n",
+                            "      <td>1.576493</td>\n",
+                            "      <td>0.519962</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>std</th>\n",
@@ -3916,6 +3920,8 @@
                             "      <td>273.902186</td>\n",
                             "      <td>194.870208</td>\n",
                             "      <td>0.329023</td>\n",
+                            "      <td>1.482996</td>\n",
+                            "      <td>0.499603</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>min</th>\n",
@@ -3935,6 +3941,8 @@
                             "      <td>0.000000</td>\n",
                             "      <td>0.000000</td>\n",
                             "      <td>450.000000</td>\n",
+                            "      <td>0.000000</td>\n",
+                            "      <td>0.000000</td>\n",
                             "      <td>0.000000</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
@@ -3956,6 +3964,8 @@
                             "      <td>0.000000</td>\n",
                             "      <td>570.000000</td>\n",
                             "      <td>0.000000</td>\n",
+                            "      <td>0.000000</td>\n",
+                            "      <td>0.000000</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>50%</th>\n",
@@ -3976,6 +3986,8 @@
                             "      <td>30.000000</td>\n",
                             "      <td>765.000000</td>\n",
                             "      <td>0.050000</td>\n",
+                            "      <td>1.000000</td>\n",
+                            "      <td>1.000000</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>75%</th>\n",
@@ -3996,6 +4008,8 @@
                             "      <td>390.000000</td>\n",
                             "      <td>930.000000</td>\n",
                             "      <td>0.530000</td>\n",
+                            "      <td>3.000000</td>\n",
+                            "      <td>1.000000</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>max</th>\n",
@@ -4015,6 +4029,8 @@
                             "      <td>100.000000</td>\n",
                             "      <td>1020.000000</td>\n",
                             "      <td>1020.000000</td>\n",
+                            "      <td>1.000000</td>\n",
+                            "      <td>4.000000</td>\n",
                             "      <td>1.000000</td>\n",
                             "    </tr>\n",
                             "  </tbody>\n",
@@ -4062,18 +4078,18 @@
                             "75%         0.000000     100.000000     390.000000     930.000000   \n",
                             "max         2.820000     100.000000    1020.000000    1020.000000   \n",
                             "\n",
-                            "       SunlightTime/daylength  \n",
-                            "count           196776.000000  \n",
-                            "mean                 0.265187  \n",
-                            "std                  0.329023  \n",
-                            "min                  0.000000  \n",
-                            "25%                  0.000000  \n",
-                            "50%                  0.050000  \n",
-                            "75%                  0.530000  \n",
-                            "max                  1.000000  "
+                            "       SunlightTime/daylength  weather_type_n        isSun_n  \n",
+                            "count           196776.000000   196776.000000  196776.000000  \n",
+                            "mean                 0.265187        1.576493       0.519962  \n",
+                            "std                  0.329023        1.482996       0.499603  \n",
+                            "min                  0.000000        0.000000       0.000000  \n",
+                            "25%                  0.000000        0.000000       0.000000  \n",
+                            "50%                  0.050000        1.000000       1.000000  \n",
+                            "75%                  0.530000        3.000000       1.000000  \n",
+                            "max                  1.000000        4.000000       1.000000  "
                         ]
                     },
-                    "execution_count": 26,
+                    "execution_count": 20,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -4084,7 +4100,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 27,
+            "execution_count": 11,
             "metadata": {},
             "outputs": [
                 {
@@ -4123,7 +4139,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 28,
+            "execution_count": 9,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -4134,7 +4150,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 29,
+            "execution_count": 12,
             "metadata": {},
             "outputs": [
                 {
@@ -4169,7 +4185,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 30,
+            "execution_count": 10,
             "metadata": {},
             "outputs": [
                 {
@@ -4352,7 +4368,7 @@
                             "4         100             0        450                     0.0  "
                         ]
                     },
-                    "execution_count": 30,
+                    "execution_count": 10,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -4368,37 +4384,10 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 31,
-            "metadata": {},
-            "outputs": [
-                {
-                    "data": {
-                        "text/plain": [
-                            "Index(['year', 'month', 'day', 'hour', 'minute', 'Energy delta[Wh]',\n",
-                            "       'weather_type', 'isSun_category', 'GHI', 'temp', 'pressure', 'humidity',\n",
-                            "       'wind_speed', 'rain_1h', 'snow_1h', 'clouds_all', 'sunlightTime',\n",
-                            "       'dayLength', 'SunlightTime/daylength'],\n",
-                            "      dtype='object')"
-                        ]
-                    },
-                    "execution_count": 31,
-                    "metadata": {},
-                    "output_type": "execute_result"
-                }
-            ],
-            "source": [
-                "total_data_timediv.columns"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 37,
+            "execution_count": 7,
             "metadata": {},
             "outputs": [],
             "source": [
-                "#división del dataset en datasets de entrenamiento y testeo, con outliers\n",
-                "\n",
-                "\n",
                 "predictors = ['year', 'month', 'day', 'hour', 'minute',\n",
                 "       'weather_type', 'isSun_category', 'GHI', 'temp', 'pressure', 'humidity',\n",
                 "       'wind_speed', 'rain_1h', 'snow_1h', 'clouds_all', 'sunlightTime',\n",
@@ -4414,12 +4403,10 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 36,
+            "execution_count": 11,
             "metadata": {},
             "outputs": [],
             "source": [
-                "#división del dataset en datasets de entrenamiento y testeo, sin outliers\n",
-                "\n",
                 "predictors = ['year', 'month', 'day', 'hour', 'minute',\n",
                 "       'weather_type', 'isSun_category', 'GHI', 'temp', 'pressure', 'humidity',\n",
                 "       'wind_speed', 'rain_1h', 'snow_1h', 'clouds_all', 'sunlightTime',\n",
@@ -4431,36 +4418,6 @@
                 "\n",
                 "#data with outliers no scaled\n",
                 "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 42)"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "selection_model = SelectKBest(f_regression, k = 5)\n",
-                "selection_model.fit(X_train, y_train)\n",
-                "ix = selection_model.get_support()\n",
-                "X_train_sel = pd.DataFrame(selection_model.transform(X_train), columns = X_train.columns.values[ix])\n",
-                "X_test_sel = pd.DataFrame(selection_model.transform(X_test), columns = X_test.columns.values[ix])"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## Modelo Random Forest"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "model = RandomForestRegressor(random_state = 42)\n",
-                "model.fit(X_train, y_train)"
             ]
         }
     ],
